sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:11: error: not found: value avantBlanc
      print(apresbleu + avantBlanc)
                        ^